# gravitysimv2

./: CMakeLists.txt  README.md  oldcode.txt  useful.txt
codelite/: CMakeCache.txt  GravitySim.project  GravitySim.workspace  Makefile  build.sh  cmake_install.cmake
codelite/.codelite/: GravitySim.session  GravitySim.tags  refactoring.db
include/: camera.hpp  cube.hpp  shader.hpp
include/glad/: glad.h
shaders/: gdal.fs  gdal.vs  light.fs  object.fs  object.vs  shader.fs  shader.vs  simple.fs  simple.vs  sphere.fs  terrain.vert
src/: camera.cpp  glad.c  main.cpp  shader.cpp
